Initial code to test using LSTM parser via API

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -6,7 +6,8 @@ set(CMAKE_CXX_FLAGS "-Wall -std=c++11 -O3 -g")
 
 enable_testing()
 
-include_directories(${CMAKE_CURRENT_SOURCE_DIR})
+include_directories(${CMAKE_CURRENT_SOURCE_DIR}/lstm-parser)
+include_directories(${CMAKE_CURRENT_SOURCE_DIR}/lstm-parser/cnn)
 set(WITH_EIGEN_BACKEND 1)
 
 # look for Boost
