Updated to latest parser; driver now uses parser via new class

--- a/lstm-causality/CMakeLists.txt
+++ b/lstm-causality/CMakeLists.txt
@@ -1,5 +1,5 @@
 project(lstm-causality-tagger:tagger)
 CMAKE_MINIMUM_REQUIRED(VERSION 2.8)
 
-ADD_EXECUTABLE(lstm-causality-tagger tagger-driver.cc)
+ADD_EXECUTABLE(lstm-causality-tagger tagger-driver.cc LSTMCausalityTagger.cpp)
 target_link_libraries(lstm-causality-tagger lstm-parser-core ${Boost_LIBRARIES})
