--- a/lstm-causality/CMakeLists.txt
+++ b/lstm-causality/CMakeLists.txt
@@ -1,5 +1,8 @@
 project(lstm-causality-tagger:tagger)
 CMAKE_MINIMUM_REQUIRED(VERSION 2.8)
 
-ADD_EXECUTABLE(lstm-causality-tagger tagger-driver.cc LSTMCausalityTagger.cpp)
+find_package(Boost COMPONENTS program_options filesystem)
+
+ADD_EXECUTABLE(lstm-causality-tagger tagger-driver.cc LSTMCausalityTagger.cpp
+               BecauseOracleTransitionCorpus.cpp)
 target_link_libraries(lstm-causality-tagger lstm-parser-core ${Boost_LIBRARIES})
