--- a/lstm-causality/CMakeLists.txt
+++ b/lstm-causality/CMakeLists.txt
@@ -1,7 +1,7 @@
 project(lstm-causality-tagger:tagger)
 CMAKE_MINIMUM_REQUIRED(VERSION 2.8)
 
-find_package(Boost COMPONENTS program_options filesystem)
+find_package(Boost COMPONENTS program_options filesystem system)
 
 ADD_EXECUTABLE(lstm-causality-tagger tagger-driver.cc LSTMCausalityTagger.cpp
                BecauseOracleTransitionCorpus.cpp)
