--- a/lstm-causality/CMakeLists.txt
+++ b/lstm-causality/CMakeLists.txt
@@ -4,5 +4,5 @@ CMAKE_MINIMUM_REQUIRED(VERSION 2.8)
 find_package(Boost COMPONENTS program_options filesystem system)
 
 ADD_EXECUTABLE(lstm-causality-tagger tagger-driver.cc LSTMCausalityTagger.cpp
-               BecauseOracleTransitionCorpus.cpp)
+               BecauseOracleTransitionCorpus.cpp BecauseData.cpp)
 target_link_libraries(lstm-causality-tagger lstm-parser-core ${Boost_LIBRARIES})
