Added basic metrics test

--- a/lstm-causality/CMakeLists.txt
+++ b/lstm-causality/CMakeLists.txt
@@ -6,3 +6,9 @@ find_package(Boost COMPONENTS program_options filesystem system)
 ADD_EXECUTABLE(lstm-causality-tagger tagger-driver.cc LSTMCausalityTagger.cpp
                BecauseOracleTransitionCorpus.cpp BecauseData.cpp)
 target_link_libraries(lstm-causality-tagger lstm-parser-core ${Boost_LIBRARIES})
+
+if(CMAKE_BUILD_TYPE STREQUAL "Debug")
+    ADD_EXECUTABLE(metrics-test metrics-test.cpp LSTMCausalityTagger.cpp
+               BecauseOracleTransitionCorpus.cpp BecauseData.cpp)
+    target_link_libraries(metrics-test gtest gtest_main pthread lstm-parser-core ${Boost_LIBRARIES})
+endif(CMAKE_BUILD_TYPE STREQUAL "Debug")
